--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,7 @@
         "nikic/fast-route": "^1.3",
         "monolog/monolog": "^3.1",
         "php-di/php-di": "^7.0",
-        "doctrine/annotations": "^2.0",
-        "psr/container": "^2.0",
-        "doctrine/lexer": "^3.0"
+        "psr/container": "^2.0"
 },
   "autoload": {
     "psr-4": {
