--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "nikic/fast-route": "^1.3",
         "monolog/monolog": "^3.1",
         "php-di/php-di": "^7.0",
-        "psr/container": "^2.0"
+        "psr/container": "^2.0",
+        "phpmailer/phpmailer": "^6.9"
 },
   "autoload": {
     "psr-4": {
