Update compese file

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MYSQL_DATABASE=bizniz
-MYSQL_PASSWORD=bizniz
-MYSQL_ROOT_PASSWORD=biznizroot
-MYSQL_USER=bizniz
+MYSQL_DATABASE=biznizz
+MYSQL_PASSWORD=biznizz
+MYSQL_ROOT_PASSWORD=biznizzroot
+MYSQL_USER=biznizz
