--- a/podman/podman-compose.yml
+++ b/podman/podman-compose.yml
@@ -1,4 +1,8 @@
-version: "3"
+version: "3.9"
+
+x-podman:
+  podman-pod:
+    name: biznizz
 
 services:
   web:
@@ -11,6 +15,8 @@ services:
       - '8443:443'
     volumes:
       - ../:/var/www/html
+      - apache/sites-available/default.conf:/etc/apache2/sites-available/default.conf
+      - apache/ssl:/etc/apache2/ssl
     environment:
       # Optional, falls du php.ini oder Module brauchst
       # Beispiel: PHP_MEMORY_LIMIT: 512M
@@ -27,10 +33,10 @@ services:
     env_file:
       - ../.env
     environment:
-      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
-      MYSQL_DATABASE: "${MYSQL_DATABASE}"
-      MYSQL_USER: "${MYSQL_USER}"
-      MYSQL_PASSWORD: "${MYSQL_PASSWORD}"
+      MARIADB_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+      MARIADB_DATABASE: "${MYSQL_DATABASE}"
+      MARIADB_USER: "${MYSQL_USER}"
+      MARIADB_PASSWORD: "${MYSQL_PASSWORD}"
     networks:
       - backend
 
